@@ -32,6 +32,7 @@ https://github.com/elastic/beats/compare/v5.3.0...master[Check the HEAD diff]
 *Filebeat*
 
 - Fix modules default file permissions. {pull}3879[3879]
+- Properly shut down crawler in case one prospector is misconfigured. {pull}4037[4037]
 
 *Heartbeat*
 
